<resources>
    <!-- TODO: clean up unused preferences -->
    <string name="app_name">tictac</string>
    <string name="BLANK"> </string>
    <string name="PLAYER_ONE">X</string>
    <string name="PLAYER_TWO">O</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="hello_blank_fragment">Hello fragment</string>
    <string name="prefs_board_size_summary">The size of the game board.</string>
    <string name="prefs_board_size_title">Board Size</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_reset_title">Reset</string>
    <string name="no_recyclerview_error_msg">Could not find the board grid; please ensure there is a RecyclerView with the id R.id.gameBoard</string>
    <string name="board_size_setting_not_valid_error_msg">Please make sure the Board Size Setting is a valid number</string>
    <string name="reset_btn">reset</string>
    <string name="dialogfragment_missing_numberpicker_exception_msg">Could not find a numberpicker; please make sure there is a NumberPicker present with the id R.id.boardSizePicker present</string>
    <string name="prefs_board_size_key">boardSize</string>
    <string name="prefs_game_ruleset_key">gameRuleSet</string>
    <string name="prefs_game_ruleset_title">Connect Four rule set</string>
    <string name="prefs_game_ruleset_summary">Require only a line of 4 tiles to win boards larger than 4 cubic tiles.</string>

</resources>
