<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:key="@string/prefs_game_ruleset_key"
        android:title="@string/prefs_game_ruleset_title"
        android:summary="@string/prefs_game_ruleset_summary"

        android:defaultValue="false"
        android:enabled="false" />

    <!--suppress AndroidElementNotAllowed -->
    <online.madeofmagicandwires.tictac.BoardSizePreference
        android:key="@string/prefs_board_size_key"
        android:title="@string/prefs_board_size_title"
        android:summary="@string/prefs_board_size_summary"
        android:dialogTitle="Please select the size of the grid."
        android:defaultValue="3"
        android:dialogLayout="@layout/boardsizepreference"
        android:negativeButtonText="Cancel"
        android:positiveButtonText="Accept"

        app:minValue="3"
        app:maxValue="9"

        style="@style/Preference.Material"/>


</PreferenceScreen>